# alglin-trab

./: .gitignore  CMakeLists.txt  Exercícios_02_03_04(2).ipynb  Justfile  LICENSE  README.md  demo.ipynb  test.py
alglin_cpp/: CMakeLists.txt
alglin_cpp/include/: core.hpp
alglin_cpp/src/: bindings.cpp  core.cpp
alglin_python/: __init__.py  loader.py  movie_sim.py  svd.py  svdpp.py
cache/: out_itemknn_pred.csv  out_mp_pred.csv  test.csv  train.csv
